Questions modal overlay added, search panel issue fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -21,6 +21,8 @@
 @import "site/userinfo";
 @import "site/color-scheme";
 @import "site/alta-sites";
+@import "site/modal";
+
 /*Components Less*/
 @import "site/components/tab-panel.component.less";
 .right-border{
