--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -25,7 +25,7 @@
                         </option>
                     </select>
                     <textarea name="body" class="question-control" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
-                    <input type="checkbox" /> <label>Preguntar Anonimo</label>
+                    <input type="checkbox" #cv [checked]=false (change)="onChange(cv.checked)"/> <label>Preguntar Anonimo</label>
                 </div>
                 <div class="suggestion-container" *ngIf="(filteredQuestionList?.length > 0) || (categoryMatched?.length > 0)">
                     <div class="arrow-container"></div>
