--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -1,8 +1,22 @@
-﻿<div *ngIf="userObj">
-    <img class="user-image " src="../../../../profile/{{userObj?.imageUrl}}" />
-    <div class="user-info">
-        <div class="user-detail">{{userObj?.name}}, {{userObj?.occupation}}  </div>
-        <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
+﻿
+<div *ngIf="!isAnonymous">
+    <div *ngIf="userObj">
+        <img class="user-image " src="../../../../profile/{{userObj?.imageUrl}}" />
+        <div class="user-info">
+            <div class="user-detail">{{userObj?.name}}, {{userObj?.occupation}}  </div>
+            <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
+        </div>
+        <div class="clearfix"></div>
     </div>
-    <div class="clearfix"></div>
+</div>
+<!-- Anonymous user -->
+<div *ngIf="isAnonymous">
+    <div *ngIf="userObj">
+        <img class="user-image " src="../../../../profile/Anonymous.png" />
+        <div class="user-info">
+            <div class="user-detail">Anonymous</div>
+            <div class="user-detail light-gray">{{viewDate | date: 'dd MMM, yyyy'}}</div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
 </div>
