question modal added to tab panel

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/dialog.component.html
@@ -1,19 +1,16 @@
-﻿<div class="modal-overlay z-modal">
-    <div class="dialog">
+﻿<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
+    <div class="dialog" >
         <header>
             <h3 class="question-title">
                 {{question.title}}
             </h3><div class="exit-button" (click)="onClickedExit()">x</div>
         </header>
         <div class="panel-article">
-            <div class="questions-container">
-                <div class="details-container">
-
-                    <div class="article-details">
-                        <div>
-                            <p [innerHTML]="question.bestAnswer?.text"></p>
-                            <button class="btn btn-default" [routerLink]="['/question/detail',question.id]">View Other answer</button>
-                        </div>
+            <div class="details-container">
+                <div class="article-details">
+                    <div>
+                        <p [innerHTML]="question.bestAnswer?.text"></p>
+                        <button class="btn btn-default" [routerLink]="['/question/detail',question.id]">View Other answer</button>
                     </div>
                 </div>
             </div>
