--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -22,27 +22,6 @@
     margin-left: 10px;
 }
 
-/* Deprecated now
-    .arrow_box {
-    position: relative;
-    background: #88b7d5;
-}
-
-.arrow_box:after {
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(136, 183, 213, 0);
-    border-bottom-color: #88b7d5;
-    border-width: 30px;
-    margin-left: -30px;
-}*/
-
 .left-footer {
     float: left;
     padding-top: 2px;
@@ -90,4 +69,7 @@ p {
 .article-footer {
     border-bottom: 1px solid #d2cece;
     padding: 0 15px;
+}
+.question-title{
+    flex-grow:1;
 }
