--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/nav/question-nav.component.html
@@ -22,8 +22,10 @@
         <ul class="nav navbar-nav">
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1">Questions</a></li>
-            <li><a routerLink="/learn">Learn</a></li>
-            <li><a routerLink="/project">Project</a></li>            
+            <!--<li><a routerLink="/learn">Learn</a></li>
+            <li><a routerLink="/project">Project</a></li>--> 
+            <li><a>My Bookmarks</a></li>
+                       
         </ul>
         <!--<ul class="nav navbar-nav navbar-right"  *ngIf="!_logObj.isLoggedIn">
             <li><a href="/signin">Log in</a></li>
