--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -1,13 +1,19 @@
 ﻿<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
+    
     <div class="dialog" >
+        <div class="exit-button" (click)="onClickedExit()">x</div>
         <header>
-            <h3 class="question-title">
-                {{question.title}}
-            </h3><div class="exit-button" (click)="onClickedExit()">x</div>
+            <div class="question-title">
+                <user-info [userObj]="question.userViewModel" [viewDate]="question?.createdOn" [isAnonymous]="question?.isAnonymous"></user-info>
+                <h3>
+                    {{question.title}}
+                </h3>
+            </div>
         </header>
         <div class="panel-article">
             <div class="details-container">
                 <div class="article-details">
+                    <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate"></user-info>
                     <div>
                         <p [innerHTML]="question.bestAnswer?.text"></p>
                         <button class="btn btn-default" [routerLink]="['/question/detail',question.id]">View Other answer</button>
