--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -60,7 +60,7 @@
                     
                     <br/>
                     <div>
-                        <input type="checkbox" #answerAnonymous [checked]=false (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar Anonimo</label>
+                        <input type="checkbox" #answerAnonymous [checked]="isAnonymous"  (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar Anonimo</label>
                     </div>
                     <div class="header-info">{{_logObj.user?.name}}  {{_logObj.user?.occupassion}} </div>
 
@@ -81,6 +81,10 @@
                 <div class="modal-footer">
                     <div style="float:left;color:#737373;line-height: 34px;">
                         <button type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Submit</button>
+                        <button type="button" (click)="submitAnswerAsDraft(question.id)" data-dismiss="modal" class="btn btn-primary">Save As Draft</button>
+                    </div>
+                    <div >
+                        
                     </div>
 
                     <div class="social-icon">
