--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -25,6 +25,7 @@
 
 /*Components Less*/
 @import "site/components/tab-panel.component.less";
+@import "site/components/question-details";
 .right-border{
     border-right:1px solid;
     color:white;
