akash: best question and mostviewd questiob with  topic bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -42,8 +42,8 @@
                 </a>
             <div class="row">
                 <div class="col-md-3">The latest question</div>
-                <div class="col-md-3">The best Question</div>
-                <div class="col-md-3">The more views</div>
+                <div class="col-md-3"><a (click)="bestquestionbytotallike(categorySelected.id)"> The best Question</a></div>
+                <div class="col-md-3"><a (click)="getmorequestionbyviewcount(categorySelected.id)">The more views</a></div>
             </div>
         </div>
 
