Answer submit full screen

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿<ap-search placeBottom="top-fixed"></ap-search>
+<div class="row">
     <div #dialogAnchor></div>
     <div #answerAnchor></div>
 </div>
