--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -30,6 +30,7 @@
     <div class="modal-footer">
         <div style="float:left;color:#737373;line-height: 34px;">
             <button type="button" (click)="submitAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Submit</button>
+            <button type="button" (click)="submitAnswerAsDraft(question.id)" data-dismiss="modal" class="btn btn-primary">Save As Draft</button>
         </div>
         <div class="social-icon">
             <a><img class="social-image" src="../images/facebooklogo.jpg" /></a>
