akash:like and question fixed for question details and also question count fixed by link

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -22,9 +22,9 @@
     <div class="summery-panel">
         <h4>{{question.answers?.length}} Answers</h4>
         <div class="row">
-            <div class="col-md-3"><h4>The latest answers</h4></div>
-            <div class="col-md-3"><h4>The best answer</h4></div>
-            <div class="col-md-4"><h4>The more view answers</h4></div>
+            <a class="col-md-3" (click)="GetLatestAnswer(question?.id)" ><h4>The latest answers</h4></a>
+            <a class="col-md-3" (click)="GetBestAnswer(question?.id)"><h4>The best answer</h4></a>
+
         </div>
         <hr />
     </div>
