--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -42,6 +42,12 @@
 
 </div>
 <!-- Modal -->
+<style>
+    .image-to-checkbox-spacing {
+        margin-left: 70px !important;
+        margin-top: -13px;
+    }
+</style>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <form #answerVM="ngForm" class="form-horizontal" role="form">
@@ -51,16 +57,19 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <h1>&iquest;{{question.title}}?</h1>
-                    <div *ngIf="!isAnonymous">
-                        <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
-                    </div>
-                    <div *ngIf="isAnonymous">
-                        <img class="user-image " src="../../../../profile/Anonymous.png" />
-                    </div>
-                    
-                    <br/>
-                    <div>
-                        <input type="checkbox" #answerAnonymous [checked]="isAnonymous"  (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar Anonimo</label>
+                    <div class="row">
+                        <div *ngIf="!isAnonymous" class="col-lg-1">
+                            <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
+                        </div>
+                        <div *ngIf="isAnonymous" class="col-lg-1">
+                            <img class="user-image " src="../../../../profile/Anonymous.png" />
+                        </div>
+
+                        <br />
+                        <div class="col-lg-1 image-to-checkbox-spacing">
+                            <input type="checkbox" #answerAnonymous [checked]="isAnonymous" (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar Anonimo</label>
+                           <!-- <a [routerLink]="['/question/questionfullscreen',question.id]">Go full screen</a>-->
+                        </div>
                     </div>
                     <div class="header-info">{{_logObj.user?.name}}  {{_logObj.user?.occupassion}} </div>
 
