search panl: minor fix, question panel seperated  into component, added question panel into questiojn body

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-fullscreen/question-fullscreen.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-fullscreen/question-fullscreen.component.html
@@ -6,5 +6,5 @@
     
 </style>
 <div class="fullscreen">
-    <answer-submit [question]="question" ></answer-submit>
+    <answer-submit [question]="question" [isFullScreen]="true" ></answer-submit>
 </div>
