fix questions only and answers only from questions home page

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -43,7 +43,7 @@
                     <span class="glyphicon glyphicon-pencil"></span> Answers
                 </a>           
         </div>
-        <div class="row">
+        <div class="row read-question-button">
             <div class="col-md-3">The latest question</div>
             <div class="col-md-3"><a (click)="bestquestionbytotallike(categorySelected.id)"> The best Question</a></div>
             <div class="col-md-3"><a (click)="getmorequestionbyviewcount(categorySelected.id)">The more views</a></div>
